# sentinellm

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.es.md  README.md  README.md.backup  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  sentinellm.py  sllm  start_api.sh  trivy-secret.yaml  trivy.yaml
.github/: PIPELINE_SETUP.md  dependabot.yml
.github/workflows/: codeql.yml  security-pipeline.yml
.history/: README.en_20260129183442.md  README.en_20260129183558.md  README.es_20260129185040.md  README.es_20260129185057.md  README_20260129183545.md  README_20260129183558.md  README_20260129184412.md  README_20260129184426.md  README_20260129184937.md  SECURITY_20260129184055.md  SECURITY_20260129184333.md
.history/.github/: PIPELINE_SETUP_20260129184505.md  dependabot_20260129183956.yml  dependabot_20260129184333.yml  renovate.json_20260129184523.example  renovate.json_20260129184544.example
.history/.github/workflows/: codeql_20260129184016.yml  codeql_20260129184334.yml  security-pipeline_20260129183935.yml
.history/docs/: security-cicd_20260129184203.md  security-cicd_20260129184334.md
.history/scripts/: security-check_20260129184240.sh
config/: security_config.yaml
docs/: PORTS.md  README.md  api-reference.md  architecture.md  openclaw-integration.md  openclaw-vm-setup.md  proxy.md  security-deployment.md
examples/: advanced_api_client.py  api_client.py  demo.py  interactive_demo.py  openclaw-config.yaml
plugins/openclaw/: .gitignore  .npmignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
plugins/openclaw/examples/: basic.ts  openclaw-integration.ts
plugins/openclaw/src/: index.ts
plugins/openclaw/tests/: index.test.d.ts  index.test.ts
scripts/: README.md  quick-start-openclaw.sh  run_tests.sh  setup_dev.sh
src/: __init__.py
src/api/: __init__.py  app.py  auth.py  config.py  models.py
src/api/routes/: health.py  validation.py
src/cli/: __init__.py  agent_config.py  config_wizard.py  i18n.py  setup.py
src/core/: __init__.py  detector.py  entropy.py  orchestrator.py  prompt_validator.py  validator.py
src/filters/: __init__.py  llm_detector.py  prompt_injection.py
src/proxy/: __init__.py  server.py
src/utils/: __init__.py  config_loader.py  constants.py
tests/: conftest.py
tests/unit/: __init__.py  test_agent_config.py  test_api.py  test_config_loader.py  test_config_wizard.py  test_detector.py  test_entropy.py  test_health.py  test_i18n.py  test_llm_detector.py  test_prompt_injection.py  test_prompt_validator.py  test_proxy_bugs.py  test_proxy_server.py  test_setup.py  test_validator.py
